Cacti CHANGELOG

0.8.7c
-bug#0000486: RRA template edit allows invalid XFF values
-bug#0000626: Setting "Default Graph Tree" does not work with dual pane
-bug#0000828: Truncated IOS description in |query_ifAlias|
-bug#0000909: ALL_DATA_SOURCES_NODUPS breaks graphing when using "Consolidation Function" MAX 
-bug#0000943: scripts/ping.pl has incorrect response when "icmp hop redirect" occurs
-bug#0001022: strip_quotes incorrectly parsing script output
-bug#0001090: LDAP authenication fails when using quote character in password
-bug#0001100: spine hangs on unreachable hosts
-bug#0001135: Graph export feature not exporting as per user level selected
-bug#0001136: Regex ambiguous for mbstring
-bug#0001138: Lack of error checking causes graphs to not update when rrdtool crashes
-bug#0001141: Script server appears broken for "index" and "query" requests (Documentation Fix)
-bug#0001145: Save Failed error when changing Graph Details
-bug#0001147: Cactid doesn't trim white space from data template OIDs 
-bug#0001153: Undefined variable: local_graph_id in graphs.php on line 201 
-bug#0001166: Installer does not properly handle disabled guest_user conversion
-bug#0001174: Unidentified index warning
-bug#0001175: Hide hosts in Graph Permissions that you already have access to
-bug#0001176: Problem validating IPv6 addresses
-bug#0001191: Faulty IP address validation by ping.php script
-bug#0001180: Graph Export to CSV failed by using IE 6 SP2
-bug#0001194: RRDtool URL is incorrect on the about page
-bug#0001204: since upgrade to 0.87b the hosts with ip address with 255 are down and have no datas
-bug#0001206: wrong "include" statements replaced by "include_once" (was: Graphs are not Zoom-able)
-bug#0001211: Allow use of "REMOTE_USER" if "PHP_AUTH_USER" is not set for authenication
-bug#0001213: Template Copy does not hash copied template_items 
-bug#0001215: Impossible to define a none availability with the client cli/add_device.php